--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -197,7 +197,9 @@
   </div>
 
   <!-- 会話APIラッパ -->
- <script src="./web/talk.js"></script>
+<!-- 会話APIラッパ -->
+<script src="web/talk.js"></script>
+
   <script>
    /* ========== 多言語対応 ========== */
   const I18N = {
