--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -8,9 +8,13 @@
     html,body{margin:0;height:100%;overflow:hidden;background:#000;color:#fff;
       font-family:system-ui,"Noto Sans JP","Noto Sans",Arial,sans-serif;
       touch-action:none;overscroll-behavior:none}
-    .bg{position:fixed;inset:0;background-size:cover;background-position:center;
-      opacity:0;transition:opacity .7s}
-    .bg.show{opacity:1}
+  /* 既存の .bg にこれを足す（上書きでもOK） */
+.bg{
+  position:fixed;inset:0;background-size:cover;background-position:center;
+  opacity:0;transition:opacity .7s;
+  pointer-events:none;   /* ← 追加！ 背景がクリックを奪わない */
+}
+
 
     /* Topbar */
     #topbar{position:fixed;left:0;right:0;top:0;z-index:50;display:flex;justify-content:space-between;
