--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -105,9 +105,10 @@
 </head>
 <body>
   <!-- 背景 -->
-  <div id="bg-sunrise" class="bg show" style="background-image:url('./public/bg/sunrise.jpg')"></div>
-  <div id="bg-beach"   class="bg"        style="background-image:url('./public/bg/beach_day.jpg')"></div>
-  <div id="bg-night"   class="bg"        style="background-image:url('./public/bg/night_beach.jpg')"></div>
+  <div id="bg-sunrise" class="bg show" style="background-image:url('/bg/sunrise.jpg')"></div>
+<div id="bg-beach"   class="bg"        style="background-image:url('/bg/beach_day.jpg')"></div>
+<div id="bg-night"   class="bg"        style="background-image:url('/bg/night_beach.jpg')"></div>
+>
 
   <!-- Topbar -->
   <div id="topbar">
